addCatchTest(test_complex.cpp "common" "Complex")
addCatchTest(test_safeCast.cpp "common" "SafeCast")
addCatchTest(test_vector1.cpp "common" "Vector1")
addCatchTest(test_vector2.cpp "common" "Vector2")
addCatchTest(test_vector3.cpp "common" "Vector3")
addCatchTest(test_vector4.cpp "common" "Vector4")

add_subdirectory(image)